test/fails/bad_tags/add4.lgl
tag a is vec2;
tag b is vec2;
tag c is vec2;

void main() {
    a->b x = [[1., 2.], [1., 2.]];
    b->c y = [[1., 2.], [1., 2.]];
    a->c bad = x + y; // Addition cannot generate new maps
}
